# Bajaj-Hackathon

./: .gitignore  README.md  main.py  main_1[1].ipynb  model.py  pyproject.toml  requirements.txt  test.py
